tests/fail/07_uninitialized.lang
функция main() : целое {
    целое х;
    вернуть 0;
}
